[gd_scene load_steps=11 format=2]

[ext_resource path="res://Enemies/bigSlime/bigSlime.png" type="Texture" id=1]
[ext_resource path="res://Enemies/bigSlime/bigSlime.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=14]
radius = 5.66667

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 1, 1, 1, 0 )

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 1, 0, 0, 1 )

[sub_resource type="Theme" id=12]
ProgressBar/styles/bg = SubResource( 15 )
ProgressBar/styles/fg = SubResource( 16 )

[sub_resource type="CircleShape2D" id=8]
radius = 6.79007

[sub_resource type="CircleShape2D" id=7]
radius = 46.3697

[sub_resource type="Animation" id=17]
resource_name = "New Anim"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.159278, 0.159278 ), Vector2( 0.215, 0.106 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1.66667, -12.3333 ), Vector2( 2.33333, -6.33334 ) ]
}

[sub_resource type="Animation" id=18]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.190994, 0.190994 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -1 ) ]
}

[node name="bigSlime" type="KinematicBody2D" groups=["enemy"]]
position = Vector2( 4, -2 )
scale = Vector2( 3, 3 )
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [ 4.0 ]
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.333333, -12 )
scale = Vector2( 2.57227, 3.37752 )
shape = SubResource( 14 )

[node name="LifeBar" type="ProgressBar" parent="."]
margin_left = -9.0
margin_top = -40.6667
margin_right = 11.0
margin_bottom = -35.6667
theme = SubResource( 12 )
max_value = 150.0
percent_visible = false

[node name="SlimeArea" type="Area2D" parent="."]

[node name="DamageArea" type="CollisionShape2D" parent="SlimeArea"]
position = Vector2( 0.666667, -12 )
scale = Vector2( 2.25611, 2.94485 )
shape = SubResource( 8 )

[node name="FollowArea" type="Area2D" parent="."]
collision_layer = 4

[node name="FollowArea" type="CollisionShape2D" parent="FollowArea"]
scale = Vector2( 2.70036, 2.70036 )
shape = SubResource( 7 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -1 )
scale = Vector2( 0.190994, 0.190994 )
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "New Anim"
"anims/New Anim" = SubResource( 17 )
anims/RESET = SubResource( 18 )

[connection signal="body_entered" from="SlimeArea" to="." method="_on_SlimeArea_entered"]
[connection signal="body_entered" from="FollowArea" to="." method="_on_FollowArea_entered"]
[connection signal="body_exited" from="FollowArea" to="." method="_on_FollowArea_exited"]
